# facetime_v5

./: LICENSE.md  Makefile  README.md  build-client-macos.sh  fly.toml
.github/workflows/: deploy.yml
client/: Cargo.toml
client/src/: ascii_converter.rs  audio_streamer.rs  call_interface.rs  call_renderer.rs  camera.rs  cli_display.rs  client.rs  frame.rs  frame_generator.rs  jitter_buffer.rs  main.rs  pre_call_interface.rs  raw_mode_guard.rs  renderer.rs  udp_handler.rs
docker/: Dockerfile.aws  Dockerfile.fly
server/: Cargo.toml
server/src/: main.rs  room.rs  tcp_command_handler.rs  tcp_handler.rs  udp_handler.rs  wes_sfu.rs
shared/: Cargo.toml
shared/src/: lib.rs  received_tcp_command.rs  tcp_command.rs  tcp_command_id.rs  tcp_command_payload_type.rs
