[package]
name = "client"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "client"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.15"
clap = { version = "4.5.38", features = ["derive"] }
rand = "0.9.1"
crossterm = "0.29.0"
futures = "0.3.31"
chrono = "0.4.41"
libc = "0.2.173"
strum = "0.27.1"
strum_macros = "0.27.1"
ctrlc = "3.4.7"
scopeguard = "1.2.0"
libwebp-sys = "0.12.1"
cpal = "0.16.0"
opencv = { version = "0.95.0" }
anyhow = "1.0.98"
